--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale 1.0, maximum-scale 1.0 user-scalable-0">
     <meta name="content" content="KARTHIKEYAN P">
     <meta name="content" description="Web Development Internship">
+    <link rel="stylesheet" href="imagegallery.css"> 
 </head>
 <body>
     
