--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <legend  class="mobile"><button class="border"><a href="#top">go to top</a></button></legend> 
             <div id="bottom"></div>
         <footer>
-            <p>Copyright © 2022Karthikeyan Palanisamy. Designed by karthikeyanpalanisamy</p>
+            <p>Copyright © 2022 Karthikeyan Palanisamy. Designed by <b>Karthikeyan Palanisamy</b></p>
         </footer>
     </fieldset>
 </body>
